--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <a href="https://www.instagram.com/phoeberayner_/" target="_blank">
                             <img id="img5" src="Assets/video.png" alt="Instagram">
                         </a>
-                        <a href="mailto:charlottey56@gmail.com" aria-label="Send an Email">
+                        <a href="mailto:phoeberaynermezzo@gmail.com" aria-label="Send an Email">
                             <img id="img6" src="Assets/email.png" alt="Email">
                         </a>
                     </div>
