--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                         <p class="mezzo">Mezzo-Soprano</p>  
                     </div>
                     <div class="item2">
-                        <a style="padding-top: 5px;" href="javascript:void(0)" onclick="loadContent('About.html')">About</a> 
-                        <a href="javascript:void(0)" onclick="loadContent('Media.html')">Media</a> 
+                        <a style="padding-top: 5px;" href="javascript:void(0);" onclick="loadContent('About.html')">About</a>
+                        <a href="javascript:void(0);" onclick="loadContent('Media.html')">Media</a>
                     </div>
                  
                     <div class="item4">
