--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
         </div>
     </div>
 
+       <script>
+        function showContent() {
+            document.body.style.display = 'block'; // Show content once CSS is loaded
+        }
+    </script>
+    
     <script>
         function loadContent(page) {
             fetch(page)
