--- a/Media.html
+++ b/Media.html
@@ -191,6 +191,12 @@
 </div>
   
     </div> 
+         <script>
+        function showContent() {
+            document.body.style.display = 'block'; // Show content once CSS is loaded
+        }
+    </script>
+        
 <script>
 document.addEventListener("DOMContentLoaded", function () {
   const gridItems = document.querySelectorAll(".grid-container2 div");
