--- a/About.html
+++ b/About.html
@@ -46,6 +46,10 @@
             <p class="footers">PHOEBE RAYNER MEZZO-SOPRANO © 2024 ALL RIGHTS RESERVED. WEBSITE BY <a class="footers" href="https://www.instagram.com/charlotte_louiseyoung/">CHARLOTTE YOUNG.</a></p>
         </div>
 </div>
-
+ <script>
+        function showContent() {
+            document.body.style.display = 'block'; // Show content once CSS is loaded
+        }
+    </script>
 </body>   
 </html>
