Updates: new vid and optimized css

--- a/About.html
+++ b/About.html
@@ -7,10 +7,11 @@
     <title>About</title>
 </head>
 <body>
+    <div id="loadOverlay" style="background-color:#ffffff; position:absolute; top:0px; left:0px; width:100%; height:100%; z-index:2000;"></div>
 <div class="grid-container3">
-
+   
     <div class="item1">
-        <a target="_blank" href="https://www.broadwayworld.com/westend/article/Review-RIP-VAN-WINKLE-Hoxton-Hall-20231029">“Phoebe Rayner delivers the highlight of the night” (Broadway World)</a>
+        <a target="_blank" style="padding-top: 30px;" href="https://www.broadwayworld.com/westend/article/Review-RIP-VAN-WINKLE-Hoxton-Hall-20231029">“Phoebe Rayner delivers the highlight of the night” (Broadway World)</a>
     </div>
     
     <div class="item12">
@@ -34,7 +35,7 @@
         </div>
 
         <div class="item7">
-            <p class="des">On the concert platform, she has recently performed <i>Miss Donnithorne's Maggot</i> (The Stoller Hall, Manchester), <i>Pribaoutki</i> (Britten Pears Contemporary Ensemble, Snape Maltings), and a solo recital as part of the Manchester Song Festival 2024. A passionate song performer, Phoebe was a member of the RCM’s SongPlus scheme, with whom she performed recitals for International Women’s Day and an American song collaboration with the Juilliard School.</p>
+            <p class="des">On the concert platform, she has recently performed <i>Miss Donnithorne's Maggot</i> (The Stoller Hall, Manchester), <i>Pribaoutki</i> (Britten Pears Contemporary Ensemble, The Aldeburgh Festival), and a solo recital as part of the Manchester Song Festival 2024. A passionate song performer, Phoebe was a member of the RCM’s SongPlus scheme, with whom she performed recitals for International Women’s Day and an American song collaboration with the Juilliard School.</p>
         </div>
  
        
